--- a/Advanced Pandas Exercise.ipynb
+++ b/Advanced Pandas Exercise.ipynb
@@ -9397,6 +9397,7 @@
     "\n",
     "# 这样 pivot 完之后，就可以看到， 第一个 column (index) 是 x-axis, 然后， 第二个 column onward\n",
     "# 里面每个值， 是 y-axis, 然后每个 column 是一个 series\n",
+    "# 09/28/2023 revist: 知道上面这个 column to plot mapping turn out to be super helpful!!\n",
     "df_stack"
    ]
   },
