--- a/Advanced Pandas Exercise.ipynb
+++ b/Advanced Pandas Exercise.ipynb
@@ -9928,6 +9928,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "1593cb63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "score1    0.04745\n",
+       "score2    0.00012\n",
+       "score3    0.94482\n",
+       "score4    0.00758\n",
+       "score5    0.00001\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's see what this part look like\n",
+    "pd.Series(json.loads('{\\n  \"score1\": 0.04745,\\n  \"score2\": 0.00012,\\n  \"score3\": 0.94482,\\n  \"score4\": 0.00758,\\n  \"score5\": 0.00001\\n}'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "3fcf6259",
    "metadata": {},
